# avi-tempest-plugin

./: README.rst  requirements.txt  setup.cfg
avi_tempest_plugin/: README.rst  plugin.py
