[metadata]
name = tempest-plugin
version = 0.0.1
summary = Tempest Plugin for Avi LBaaS
description-file =
    README.rst
author = Avi Networks
author-email = anant@avinetworks.com
home-page = https://www.avinetworks.com/
classifier =
    Environment :: OpenStack + Avi
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    avi-tempest-plugin

[entry_points]
tempest.test_plugins =
    plugin_name = avi_tempest_plugin.plugin:AviTempestPlugin

[pbr]
warnerrors = true

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
